Export RegExpObject::info from JavaScriptCore

This allows obj->inherits(&RegExpObject::info) to work correctly from
outside JavaScriptCore.dll on Windows.

Fixes <http://webkit.org/b/46098>
fast/loader/stateobjects/pushstate-object-types.html fails on Windows

Reviewed by John Sullivan.

* runtime/RegExpObject.h: Added JS_EXPORTDATA to the info member, as
we already have for some other classes whose info members have to be
used from outside the DLL.

Canonical link: https://commits.webkit.org/58560@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67855 268f45cc-cd09-0410-ab3c-d52691b4dbfc